adss dist code for finance app

--- a/week_8_Web_Programming/register/templates/index.html
+++ b/week_8_Web_Programming/register/templates/index.html
@@ -10,7 +10,7 @@
 
     <ul>
         {% for row in rows %}
-            <li> {{ row.name }} ( {{ row.email }} )</li>
+            <li> {{ row['name']}} ( {{ row['email'] }} )</li>
         {% endfor %}
     </ul>
     
