updayes index to display purchase stock history

--- a/week_8_Web_Programming/Finance/templates/index.html
+++ b/week_8_Web_Programming/Finance/templates/index.html
@@ -5,13 +5,39 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/buy" method="post">
-        <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="symbol" placeholder="Stock symbol" type="text">
-        </div>
-        <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="shares" placeholder="Shares" type="text">
-        </div>
-        <button class="btn btn-primary" type="submit">Buy</button>
-    </form>
+    <div class="container bought-container">
+        <a>Bought!</a>
+    </div>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Symbol</th>
+          <th scope="col">Shares</th>
+          <th scope="col">Price</th>
+          <th scope="col">TOTAL</th>
+        </tr>
+      </thead>
+      <tbody>
+          {% for row in rows %}
+            <tr>
+              <th scope="row">{{ row["stock_symbol"] }}</th>
+              <td>{{ row["num_shares"] }}</td>
+              <td>${{ row["stock_value"] }}</td>
+              <td>${{ row["total_cost"] }}</td>
+            </tr>
+          {% endfor %}
+            <tr>
+              <th scope="row">CASH</th>
+              <td></td>
+              <td></td>
+              <td>{{ cash }}</td>
+            </tr>
+            <tr>
+              <td></th>
+              <td></td>
+              <td></td>
+              <th scope="row">{{ all_funds }}</td>
+            </tr>
+      </tbody>
+    </table>
 {% endblock %}
