--- a/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
+++ b/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
@@ -22,6 +22,7 @@ body {
 
   .site-header .navbar {
       padding: 12px 16px 22px 16px;
+      opacity: 0.97;
   }
   .site-header .navbar-brand {
     color: #1e2022;
@@ -66,7 +67,7 @@ body {
     font-weight: 500;
     font-size: 1.15rem;
     font-family: 'Raleway', sans-serif;
-}
+  }
   
   .content-section {
     background: #ffffff;
@@ -75,6 +76,20 @@ body {
     border-radius: 3px;
     margin-bottom: 20px;
   }
+
+  .content-section h3 {
+    font-weight: 700;
+    font-size: 1.65rem;
+    font-family: 'Playfair Display', serif;
+}
+
+.content-section .list-group-item {
+    background-color: #08d9d6;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 1rem;
+    font-family: 'Raleway', sans-serif
+}
 
   .posts h1 {
     color: #1e2022;
@@ -87,8 +102,23 @@ body {
     font-weight: 300;
     font-size: 1rem;
     font-family: 'Raleway', sans-serif;
+  }  
+
+  .posts i {
+      font-weight: 200;
+      font-size: 0.85rem;
+      font-family: 'Raleway', sans-serif;
+  }
+  .post-container {
+      padding: 0px;
+  }
+
+  .content-section p {
+    font-weight: 300;
+    font-size: 1rem;
+    font-family: 'Raleway', sans-serif;
 }
-  
+
   .article-title {
     color: #444444;
   }
@@ -135,3 +165,35 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
+  #page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 6rem;    /* Footer height */
+  }
+  
+  #footer {
+    font-family: 'Raleway', sans-serif;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 6rem;            /* Footer height */
+    background-color: #dddddd;
+  }
+
+  #footer .container-fluid {
+      text-align: center;
+      color: #fafafa;
+      padding-top: 14px;
+  }
+
+  #footer .navbar a {
+    color: #52616b;
+}
+
+#footer .navbar a:hover {
+    color: #1e2022;
+}
