--- a/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
+++ b/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
@@ -177,6 +177,8 @@ body {
   
   #footer {
     font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -196,4 +198,8 @@ body {
 
 #footer .navbar a:hover {
     color: #1e2022;
+}
+
+#footer .navbar .nav .nav-item {
+    padding: 5px 25px;
 }
