--- a/week_9_Fullstack_Project/django_project/blog/templates/blog/base.html
+++ b/week_9_Fullstack_Project/django_project/blog/templates/blog/base.html
@@ -81,21 +81,26 @@
         </div>
 
         <footer id="footer">
-                <div class="container-fluid">Django Fans is maintained by Nick Hopewell</div>
+                <div class="container-fluid">built by nick hopewell</div>
                 <nav class="navbar justify-content-center">
                     <ul class="nav">
-                      <li class="nav-item">
-                        <a class="footer-nav nav-link" href="https://www.linkedin.com/in/nick-hopewell-a83223132/"
-                          target="blank">LinkedIn <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="footer-nav nav-link" href="https://github.com/NHopewell" target="blank">GitHub</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="footer-nav nav-link"
-                          href="https://github.com/NHopewell/Nick_Hopewell_Resume/blob/master/Nick_Hopewell_Resume.pdf"
-                          target="blank">My Resume</a>
-                      </li>
+                        <li class="nav-item">
+                            <a href="https://www.linkedin.com/in/nick-hopewell-a83223132/"
+                            target="blank">
+                                <i class="fab fa-linkedin fa-2x" ></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://github.com/NHopewell" target="blank">
+                                <i class="fab fa-github fa-2x"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://github.com/NHopewell/Nick_Hopewell_Resume/blob/master/Nick_Hopewell_Resume.pdf"
+                            target="blank">
+                                <i class="far fa-file fa-2x"></i>
+                            </a>
+                        </li>
                     </ul>
                   </nav>
         </footer>
