--- a/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
+++ b/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
@@ -1,205 +1,208 @@
 body {
-    background: #fafafa;
-    color: #333333;
-    margin-top: 5rem;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    color: #1e2022;
-  }
-  
-  ul {
-    margin: 0;
-  }
-  
-  .bg-steel {
-    background-color: #fafafa;
-  }
+  background: #fafafa;
+  color: #333333;
+  margin-top: 5rem;
+}
 
-  .head-container {
-      padding: 0px 50px 0px 50px;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #1e2022;
+}
 
-  .site-header .navbar {
-      padding: 12px 16px 22px 16px;
-      opacity: 0.97;
-  }
-  .site-header .navbar-brand {
-    color: #1e2022;
-    font-family: 'Playfair Display', serif;
-    font-weight: 800;
-    font-size: 1.6rem;
+ul {
+  margin: 0;
+}
 
-  }
+.bg-steel {
+  background-color: #fafafa;
+}
 
-  .site-header .navbar-brand:hover {
-    color: #1e2022;
-  }
-  
+.head-container {
+  padding: 0px 50px 0px 50px;
+}
 
-  .site-header .navbar-nav .nav-link {
-    color: #52616b;
-    font-family: 'Raleway', sans-serif;
-  }
-  
-  .site-header .navbar-nav .nav-link:hover {
-    color: #1e2022;
-  }
-  
-  .site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
-  }
+.site-header .navbar {
+  padding: 12px 16px 22px 16px;
+  opacity: 0.97;
+}
+.site-header .navbar-brand {
+  color: #1e2022;
+  font-family: "Playfair Display", serif;
+  font-weight: 800;
+  font-size: 1.6rem;
+}
 
-  .main-container {
-      margin-top: 130px;
-      margin-bottom: 80px;
-      padding: 0px 70px 0px 70px;
-      text-align: center;
-  }
+.site-header .navbar-brand:hover {
+  color: #1e2022;
+}
 
-  .main-container h2 {
-      font-weight: 600;
-      font-size: 4rem;
-      font-family: 'Playfair Display', serif;
-  }
+.site-header .navbar-nav .nav-link {
+  color: #52616b;
+  font-family: "Raleway", sans-serif;
+}
 
-  .main-container h3 {
-    font-weight: 500;
-    font-size: 1.15rem;
-    font-family: 'Raleway', sans-serif;
-  }
-  
-  .content-section {
-    background: #ffffff;
-    padding: 10px 20px;
-    border: 1px solid #dddddd;
-    border-radius: 3px;
-    margin-bottom: 20px;
-  }
+.site-header .navbar-nav .nav-link:hover {
+  color: #1e2022;
+}
 
-  .content-section h3 {
-    font-weight: 700;
-    font-size: 1.65rem;
-    font-family: 'Playfair Display', serif;
+.site-header .navbar-nav .nav-link.active {
+  font-weight: 500;
+}
+
+.main-container {
+  margin-top: 130px;
+  margin-bottom: 80px;
+  padding: 0px 70px 0px 70px;
+  text-align: center;
+}
+
+.main-container h2 {
+  font-weight: 600;
+  font-size: 4rem;
+  font-family: "Playfair Display", serif;
+}
+
+.main-container h3 {
+  font-weight: 500;
+  font-size: 1.15rem;
+  font-family: "Raleway", sans-serif;
+}
+
+.content-section {
+  background: #ffffff;
+  padding: 10px 20px;
+  border: 1px solid #dddddd;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
+
+.content-section h3 {
+  font-weight: 700;
+  font-size: 1.65rem;
+  font-family: "Playfair Display", serif;
 }
 
 .content-section .list-group-item {
-    background-color: #08d9d6;
-    color: #ffffff;
-    font-weight: 600;
-    font-size: 1rem;
-    font-family: 'Raleway', sans-serif
+  background-color: #08d9d6;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 1rem;
+  font-family: "Raleway", sans-serif;
 }
 
-  .posts h1 {
-    color: #1e2022;
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;
-    font-size: 2.5rem;
-  }
-
-  .posts p {
-    font-weight: 300;
-    font-size: 1rem;
-    font-family: 'Raleway', sans-serif;
-  }  
-
-  .posts i {
-      font-weight: 200;
-      font-size: 0.85rem;
-      font-family: 'Raleway', sans-serif;
-  }
-  .post-container {
-      padding: 0px;
-  }
-
-  .content-section p {
-    font-weight: 300;
-    font-size: 1rem;
-    font-family: 'Raleway', sans-serif;
+.posts h1 {
+  color: #1e2022;
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+  font-size: 2.5rem;
 }
 
-  .article-title {
-    color: #444444;
-  }
-  
-  a.article-title:hover {
-    color: #428bca;
-    text-decoration: none;
-  }
-  
-  .article-content {
-    white-space: pre-line;
-  }
-  
-  .article-img {
-    height: 65px;
-    width: 65px;
-    margin-right: 16px;
-  }
-  
-  .article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
-  }
-  
-  .article-metadata a:hover {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  .article-svg {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-  }
-  
-  .account-img {
-    height: 125px;
-    width: 125px;
-    margin-right: 20px;
-    margin-bottom: 16px;
-  }
-  
-  .account-heading {
-    font-size: 2.5rem;
-  }
+.posts p {
+  font-weight: 300;
+  font-size: 1rem;
+  font-family: "Raleway", sans-serif;
+}
 
-  #page-container {
-    position: relative;
-    min-height: 100vh;
-  }
-  
-  #content-wrap {
-    padding-bottom: 6rem;    /* Footer height */
-  }
-  
-  #footer {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-    font-size: 1rem;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 6rem;            /* Footer height */
-    background-color: #dddddd;
-  }
+.posts i {
+  font-weight: 200;
+  font-size: 0.85rem;
+  font-family: "Raleway", sans-serif;
+}
+.post-container {
+  padding: 0px;
+}
 
-  #footer .container-fluid {
-      text-align: center;
-      color: #fafafa;
-      padding-top: 14px;
-  }
+.content-section p {
+  font-weight: 300;
+  font-size: 1rem;
+  font-family: "Raleway", sans-serif;
+}
 
-  #footer .navbar a {
-    color: #52616b;
+.article-title {
+  color: #444444;
+}
+
+a.article-title:hover {
+  color: #428bca;
+  text-decoration: none;
+}
+
+.article-content {
+  white-space: pre-line;
+}
+
+.article-img {
+  height: 65px;
+  width: 65px;
+  margin-right: 16px;
+}
+
+.article-metadata {
+  padding-bottom: 1px;
+  margin-bottom: 4px;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.article-metadata a:hover {
+  color: #333;
+  text-decoration: none;
+}
+
+.article-svg {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+}
+
+.account-img {
+  height: 125px;
+  width: 125px;
+  margin-right: 20px;
+  margin-bottom: 16px;
+}
+
+.account-heading {
+  font-size: 2.5rem;
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 6rem; /* Footer height */
+}
+
+#footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 6rem; /* Footer height */
+  background-color: #dddddd;
+}
+
+#footer .container-fluid {
+  text-align: center;
+  color: #fafafa;
+  padding-top: 14px;
+}
+
+#footer .navbar a {
+  color: #52616b;
 }
 
 #footer .navbar a:hover {
-    color: #1e2022;
+  color: #1e2022;
 }
 
 #footer .navbar .nav .nav-item {
-    padding: 5px 25px;
+  padding: 5px 25px;
 }
