--- a/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
+++ b/week_9_Fullstack_Project/django_project/blog/static/blog/main.css
@@ -25,6 +25,10 @@ ul {
   padding: 0px 50px 0px 50px;
 }
 
+.register {
+  color: #029e74;
+}
+
 .site-header .navbar {
   padding: 12px 16px 22px 16px;
   opacity: 0.97;
@@ -87,52 +91,37 @@ ul {
 }
 
 .content-section .list-group-item {
-  background-color: #08d9d6;
+  background-color: #029e74;
   color: #ffffff;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 1rem;
   font-family: "Raleway", sans-serif;
 }
 
-.posts h1 {
-  color: #1e2022;
-  font-family: "Playfair Display", serif;
-  font-weight: 400;
-  font-size: 2.5rem;
-}
-
-.posts p {
-  font-weight: 300;
-  font-size: 1rem;
-  font-family: "Raleway", sans-serif;
-}
-
-.posts i {
-  font-weight: 200;
-  font-size: 0.85rem;
-  font-family: "Raleway", sans-serif;
-}
-.post-container {
-  padding: 0px;
-}
-
-.content-section p {
+.content-info {
   font-weight: 300;
   font-size: 1rem;
   font-family: "Raleway", sans-serif;
 }
 
 .article-title {
-  color: #444444;
+  color: #1e2022;
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+  font-size: 2.65rem;
 }
 
 a.article-title:hover {
-  color: #428bca;
+  color: #018f69;
   text-decoration: none;
 }
 
 .article-content {
   white-space: pre-line;
+  color: #a9a9a9;
+  font-weight: 500;
+  font-size: 1.2rem;
+  font-family: "Raleway", sans-serif;
 }
 
 .article-img {
@@ -147,9 +136,58 @@ a.article-title:hover {
   border-bottom: 1px solid #e3e3e3;
 }
 
+.article-metadata a {
+  padding-bottom: 1px;
+  margin-bottom: 4px;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #018f69;
+  font-family: "Raleway", sans-serif;
+}
+
 .article-metadata a:hover {
   color: #333;
   text-decoration: none;
+}
+
+.article-metadata small {
+  font-size: 0.8rem;
+  font-family: "Raleway", sans-serif;
+  color: #757575;
+}
+
+.admin-section {
+  background: #d5fce9;
+}
+
+.admin-content {
+  color: #1e2022;
+}
+
+.admin-metadata {
+  padding-bottom: 1px;
+  margin-bottom: 4px;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.admin-metadata a {
+  padding-bottom: 1px;
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 1rem;
+  color: #40514e;
+  font-family: "Raleway", sans-serif;
+}
+
+.admin-metadata a:hover {
+  color: #018f69;
+  text-decoration: none;
+}
+
+.admin-metadata small {
+  font-size: 0.8rem;
+  font-family: "Raleway", sans-serif;
+  color: #757575;
 }
 
 .article-svg {
@@ -191,7 +229,7 @@ a.article-title:hover {
 
 #footer .container-fluid {
   text-align: center;
-  color: #fafafa;
+  color: ##a3a3a3;
   padding-top: 14px;
 }
 
