--- a/week_9_Fullstack_Project/django_project/blog/templates/blog/home.html
+++ b/week_9_Fullstack_Project/django_project/blog/templates/blog/home.html
@@ -1,10 +1,38 @@
 {% extends "blog/base.html" %}
 {% block content %}
     {% for post in posts %}
-        <div class='container post-container'>
-            <h1>{{ post.title }}</h1>
-            <i>By {{ post.author }} on {{ post.date_posted }}</i>
-            <p>{{ post.content }}</p>
-        </div>
+        {% if post.author_status == 'admin' %}
+        <article class="media content-section admin-section">
+            <div class="media-body">
+            <div class="article-metadata admin-metadata">
+                <a class="mr-2" href="#"><i class="fas fa-crown"></i> {{ post.author }} <small>[admin]</small></a>
+                <small>{{ post.date_posted }}</small>
+            </div>
+            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <p class="article-content admin-content">{{ post.content }}</p>
+            </div>
+        </article>
+        {% else %}
+        <article class="media content-section">
+            <div class="media-body">
+            <div class="article-metadata">
+                <a class="mr-2" href="#">{{ post.author }}</a>
+                <small>{{ post.date_posted }}</small>
+            </div>
+            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content }}</p>
+            </div>
+        </article>
+        {% endif %}
     {% endfor %}
 {% endblock content %}
+
+
+
+<!--
+  <div class='container post-container'>
+    <h1>{{ post.title }}</h1>
+    <i>By {{ post.author }} on {{ post.date_posted }}</i>
+    <p>{{ post.content }}</p>
+</div>
+-->
